salesforce-org/org-backup/force-app/main/default/objects/Peer_Review__c/Peer_Review__c.object-meta.xml
<CustomObject>
    <label>Peer Review</label>
    <nameField>
        <label>Peer_Review_Object_Definition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peer_Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>