salesforce-org/org-backup/force-app/main/default/objects/Peer_Review__c/fields/Is_Gold_Standard__c.field-meta.xml
<CustomField>
    <fullName>Is_Gold_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gold Standard</label>
    <type>Checkbox</type>
</CustomField>