salesforce-org/org-backup/force-app/main/default/objects/Peer_Review__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Peer_Review</relationshipLabel>
    <relationshipName>Peer_Review</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>