salesforce-org/org-backup/force-app/main/default/objects/Peer_Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Peer_Review</relationshipLabel>
    <relationshipName>Peer_Review</relationshipName>
    <type>Lookup</type>
</CustomField>