salesforce-org/org-backup/force-app/main/default/objects/Peer_Review__c/fields/Reviewer_Weight_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Weight_Snapshot__c</fullName>
    <label>Reviewer Weight Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>