salesforce-org/org-backup/force-app/main/default/objects/Peer_Review__c/fields/Vote__c.field-meta.xml
<CustomField>
    <fullName>Vote__c</fullName>
    <label>Vote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>+1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>