salesforce-org/org-backup/force-app/main/default/objects/Peer_Review__c/fields/Weighted_Vote__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Vote__c</fullName>
    <formula>VALUE(TEXT(Vote__c)) * Reviewer_Weight_Snapshot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Vote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>