salesforce-org/org-backup/force-app/main/default/objects/Peer_Review__c/validationRules/Prevent_Update_on_Completed_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Update_on_Completed_Review</fullName>
    <active>true</active>
    <description>Prevents updates to Peer Review records once they are marked as Completed.</description>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;), NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>This review verdict has been sealed and cannot be modified.</errorMessage>
</ValidationRule>